--- a/client/src/app/errors/not-found/not-found.component.html
+++ b/client/src/app/errors/not-found/not-found.component.html
@@ -1,6 +1,4 @@
 <div class="container">
-  <h1>Not found</h1>
-  <button class="btn btn-info btn-lg" routerLink="/">
-    Return to home page
-  </button>
+  <h1>Page not found</h1>
+  <button class="btn btn-info btn-lg" routerLink="/">GO BACK HOME</button>
 </div>
